landing test for each app

--- a/apps/cms/src/index.html
+++ b/apps/cms/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <cms-root></cms-root>
+    <cms-root test-id="landing-cms"></cms-root>
   </body>
 </html>
