--- a/apps/waterfall/waterfall/src/index.html
+++ b/apps/waterfall/waterfall/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <blockframes-root></blockframes-root>
+    <waterfall-root></waterfall-root>
   </body>
 </html>
