--- a/apps/waterfall/waterfall/src/index.html
+++ b/apps/waterfall/waterfall/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Waterfall</title>
+    <title>Blockframes</title>
     <base href="/" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeQAC99595VnZaE0d0pxmYHH8EJfQqv3Y"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="theme-color" content="#1976d2">
+    <meta name="description" content="The waterfall app that is meant for you" />
+
   </head>
-  <body>
+  <body class="mat-app-background mat-typography">
     <waterfall-root></waterfall-root>
   </body>
 </html>
